--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Mapping</string>
+    <string name="choosemap">choose map</string>
+    <string name="regularview">regular view</string>
+    <string name="hikebikemapview"> hike bike mapview</string>
+    <string name="selectmap"> select map</string>
 </resources>
